--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ coverage
 
 # API keys and secrets
 .env
-key.map.json
-key.macros.json
+src/config/*.json
+!src/config/*.example.json
 
 # Dependency directory
 node_modules
