--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ SLACK_APP_ID=secret
 SLACK_SIGNING_SECRET=secret
 SLACK_OAUTH=secret
 SLACK_MEMBER_ID=secret
+
+CLICKUP_TOKEN=secret
+CLICKUP_TEAM_ID=secret
