--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "chalk": "^4.1.0",
     "date-fns": "^2.16.0",
     "dotenv": "^8.2.0",
-    "iohook": "^0.9.3",
+    "iohook": "0.6.6",
     "minimist": "^1.2.5"
   },
   "devDependencies": {
