--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "laziness-overdrive",
+	"name": "@missing-comma/laziness-overdrive",
 	"version": "0.0.1-beta",
 	"description": "",
 	"main": "index.js",
@@ -12,6 +12,7 @@
 		"test-keys:short": "yarn start key.map --s",
 		"lazy": "yarn start",
 		"test-keys:final": "yarn start key.map --f",
+		"ts": "yarn start timer start",
 		"postinstall": "patch-package"
 	},
 	"author": "",
